add watch email refresh